--- a/DepartmentModule/Views/Shared/_Layout.cshtml
+++ b/DepartmentModule/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - DepartmentModule</title>
+    <title>@ViewData["Title"] - Kafedra moduli</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -15,9 +15,9 @@
             <div class="panel-body">
                 <nav class="navbar navbar-expand">
                     <ul class="nav nav-tabs-bordered">
-                        <li><a asp-area="" asp-controller="Subjects" class="text-body" asp-action="Index">DepartmentModule</a></li>
-                        <li><a asp-controller="Subjects" asp-action="Index" class="text-body">Subjects</a></li>
-                        <li><a asp-controller="Books" asp-action="Index" class="text-body">Books</a></li>
+                        <li><a asp-area="" asp-controller="Subjects" class="text-body" asp-action="Index">Kafedra moduli</a></li>
+                        <li><a asp-controller="Subjects" asp-action="Index" class="text-body">Fanlar</a></li>
+                        <li><a asp-controller="Books" asp-action="Index" class="text-body">Kitoblar</a></li>
                         <partial name="_LoginPartial" />
                     </ul>
                 </nav>
@@ -31,7 +31,7 @@
     </div>
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - DepartmentModule - <a asp-area="" asp-controller="Subjects" asp-action="Index">Info</a>
+            &copy; 2021 - Kafedra moduli - <a asp-area="" asp-controller="Subjects" asp-action="Index">Info</a>
         </div>
     </footer>
 
