--- a/DepartmentModule/Views/Subjects/Details.cshtml
+++ b/DepartmentModule/Views/Subjects/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DepartmentModule.Models.Subject
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Fan haqida ma'lumot";
 }
 
 <div class="card">
@@ -23,6 +23,6 @@
 </div>
 
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.SubjectID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.SubjectID">Tahrirlash</a> |
+    <a asp-action="Index">Ro'yxatga qaytish</a>
 </div>
