--- a/DepartmentModule/Views/Books/Edit.cshtml
+++ b/DepartmentModule/Views/Books/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@model DepartmentModule.Models.Book
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Tahrirlash";
 }
 
-<h1>Edit</h1>
+<h1>Tahrirlash</h1>
 
-<h4>Book</h4>
+<h4>Kitob</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -24,14 +24,14 @@
                 <span asp-validation-for="Url" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Saqlash" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Ro'yxatga qaytish</a>
 </div>
 
 @section Scripts {
