--- a/DepartmentModule/Views/Books/Index.cshtml
+++ b/DepartmentModule/Views/Books/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<DepartmentModule.Models.Book>
 
 @{
-    ViewData["Title"] = "Select";
+    ViewData["Title"] = "Kitob tanlash";
 }
 
 
 
 <p>
-    <a asp-action="Create" class="btn btn-primary">Add new Book</a>
+    <a asp-action="Create" class="btn btn-primary">Yangi yaratish</a>
 </p>
 <form>
 <table class="table">
@@ -27,10 +27,9 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
-                    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@item.BookID">Edit</a>
-                    <a asp-action="Details" class="btn btn-success" asp-route-id="@item.BookID">Details</a>
-                    <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.BookID">Delete</a>
-                    <a asp-action="Select" asp-controller="Subjects" class="btn btn-primary" asp-route-id="@item.BookID">Select</a>
+                    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@item.BookID">Tahrirlash</a>
+                    <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.BookID">O'chirish</a>
+                    <a asp-action="Select" asp-controller="Subjects" class="btn btn-primary" asp-route-id="@item.BookID">Tanlash</a>
 
                 </td>
             </tr>
