--- a/DepartmentModule/Views/Subjects/Delete.cshtml
+++ b/DepartmentModule/Views/Subjects/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model DepartmentModule.Models.Subject
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "O'chirish";
 }
 
-<h1>Delete</h1>
+<h1>O'chirish</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Rostdan ham bu fanni o'chirmoqchimisiz?</h3>
 <div>
-    <h4>Subject</h4>
+    <h4>Fan</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -22,6 +22,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="SubjectID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Ro'yxatga qaytish</a>
     </form>
 </div>
