--- a/DepartmentModule/Views/Subjects/Edit.cshtml
+++ b/DepartmentModule/Views/Subjects/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model DepartmentModule.Models.Subject
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Tahrirlash";
 }
 
-<h1>Edit</h1>
+<h1>Tahrirlash</h1>
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="SubjectID" />
@@ -25,8 +25,8 @@
                       
                         </td>
                         <td>
-                            <a asp-controller="Books" asp-action="AddProgram" class="btn btn-primary">Select</a>
-                            <a asp-controller="Books" asp-action="AddProgram" class="btn btn-primary">Open</a>
+                            <a asp-controller="Books" asp-action="AddProgram" class="btn btn-primary">Tanlash</a>
+                            <a asp-controller="Books" asp-action="AddProgram" class="btn btn-primary">Ochish</a>
                         </td>
                     </tr>
                     
@@ -45,7 +45,7 @@
                             <input readonly="readonly" asp-for="Themes.Name" class="form-control" />
                         </td>
                         <td>
-                            <a asp-controller="Books" asp-action="AddThemes" class="btn btn-primary">Select</a>
+                            <a asp-controller="Books" asp-action="AddThemes" class="btn btn-primary">Tanlash</a>
                         </td>
                     </tr>
 
@@ -61,7 +61,7 @@
                                 Name
                             </td>
                             <td>
-                                <a  asp-controller="Books" asp-action="AddLiterature" class="btn btn-primary ">Add New</a>
+                                <a  asp-controller="Books" asp-action="AddLiterature" class="btn btn-primary ">Yangi qo'shish</a>
                             </td>
                         </tr>
                     </thead>
@@ -74,8 +74,8 @@
                             </td>
                             
                             <td>
-                                <a asp-controller="Books" asp-action="Details" class="btn btn-success" asp-route-id="@item.Literature.BookID">Details</a>
-                                <a asp-controller="Subjects" asp-action="RemoveLiterature" class="btn btn-danger" asp-route-id="@item.Literature.BookID">Delete</a>
+                                <a asp-controller="Books" asp-action="Details" class="btn btn-success" asp-route-id="@item.Literature.BookID">Ma'lumot</a>
+                                <a asp-controller="Subjects" asp-action="RemoveLiterature" class="btn btn-danger" asp-route-id="@item.Literature.BookID">O'chirish</a>
                             </td>
                         </tr>
                         }
@@ -91,11 +91,11 @@
                     <thead>
                         <tr>
                             <td>
-                                Name
+                                Nomi
                             </td>
 
                             <td>
-                                <a asp-controller="Books" asp-action="AddAdditionallLiterature" class="btn btn-primary ">Add New</a>
+                                <a asp-controller="Books" asp-action="AddAdditionallLiterature" class="btn btn-primary ">Yangi qo'shish</a>
                             </td>
                         </tr>
                     </thead>
@@ -108,8 +108,8 @@
                             </td>
 
                             <td>
-                                <a asp-controller="Books" asp-action="Details" class="btn btn-success" asp-route-id="@item.AdditionalLiterature.BookID">Details</a>
-                                <a asp-controller="Subjects" asp-action="RemoveAdditionalLiterature" class="btn btn-danger" asp-route-id="@item.AdditionalLiterature.BookID">Delete</a>
+                                <a asp-controller="Books" asp-action="Details" class="btn btn-success" asp-route-id="@item.AdditionalLiterature.BookID">Ma'lumot</a>
+                                <a asp-controller="Subjects" asp-action="RemoveAdditionalLiterature" class="btn btn-danger" asp-route-id="@item.AdditionalLiterature.BookID">O'chirish</a>
                             </td>
                         </tr>
                         }
@@ -121,13 +121,13 @@
             
 
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary"  />
+                <input type="submit" value="Saqlash" class="btn btn-primary"  />
             </div>
         </form>
 
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Ro'yxatga qaytish</a>
 </div>
 
 @section Scripts {
