--- a/DepartmentModule/Views/Subjects/Index.cshtml
+++ b/DepartmentModule/Views/Subjects/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<DepartmentModule.Models.Subject>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Bosh sahifa";
 }
 
 <p>
-    <a class="btn btn-info" asp-action="Create">Create New</a>
+    <a class="btn btn-info" asp-action="Create">Yangi yaratish</a>
 </p>
 
 <table class="table table-hover table-bordered"  width="100%">
@@ -85,9 +85,9 @@
 
 
                 <td>
-                    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@item.SubjectID">Edit</a>
-                    <a asp-action="Details" class="btn btn-success" asp-route-id="@item.SubjectID">Details</a>
-                    <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.SubjectID">Delete</a>
+                    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@item.SubjectID">Tahrirlash</a>
+                    <a asp-action="Details" class="btn btn-success" asp-route-id="@item.SubjectID">Ma'lumot</a>
+                    <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.SubjectID">O'chirish</a>
                 </td>
             </tr>
         }
